Checkout page modified

--- a/RazorPizzeria/Pages/Checkout/Checkout.cshtml
+++ b/RazorPizzeria/Pages/Checkout/Checkout.cshtml
@@ -3,4 +3,15 @@
 @{
 }
 
-<a class="nav-link text-dark" asp-area="" asp-page="Checkout/Checkout">Checkout</a>
+
+<h1> Your order!</h1>
+<div class="align-content-center">
+    <div class="col-3 mx-auto mb-5">
+        <img class="w-100" asp-append-version="true" />
+        <p> Your order for the pizza is ready</p>
+        <p> Total Price for your order is</p>
+        <br />
+        <a class="btn alert-primary mt-1 mx-auto" asp-area="" asp-page="ThankYouPage">Confirm order</a>
+
+    </div>
+</div>
