Stop 46. Mock Database and sending data over asp-route

--- a/RazorPizzeria/Pages/Checkout/ThankYou.cshtml
+++ b/RazorPizzeria/Pages/Checkout/ThankYou.cshtml
@@ -3,4 +3,4 @@
 @{
 }
 
-<a class="nav-link text-dark" asp-area="" asp-page="Checkout/ThankYou">Thankyou</a>
+<h1> tahnk you for orde4irng here</h1>
