--- a/RazorPizzeria/Pages/Index.cshtml
+++ b/RazorPizzeria/Pages/Index.cshtml
@@ -16,7 +16,7 @@
 
     <img class="mainImage" src="~/images/PizzaTime.jpg" />
     <br />
-    <a class="btn btn-primary mt-1" asp-area="" asp-page="Checkout/ThankYou">Bring me that pizza</a>
+    <a class="btn btn-primary mt-1" asp-area="" asp-page="Pizza">Bring me that pizza</a>
 
 
 </div>
