--- a/RazorPizzeria/Pages/Checkout/Checkout.cshtml
+++ b/RazorPizzeria/Pages/Checkout/Checkout.cshtml
@@ -5,13 +5,16 @@
 
 
 <h1> Your order!</h1>
+@{
+    var imagePath = "~/images/Pizzas/" + (@Model.ImageTitle + ".png" );
+}
 <div class="align-content-center">
     <div class="col-3 mx-auto mb-5">
-        <img class="w-100" asp-append-version="true" />
-        <p> Your order for the pizza is ready</p>
-        <p> Total Price for your order is</p>
+        <img src=@imagePath class="w-100" asp-append-version="true" />
+        <p> Your order for the @Model.PizzaName pizza is ready</p>
+        <p> Total Price for your order is: @Model.PizzaPrice EUR</p>
         <br />
-        <a class="btn alert-primary mt-1 mx-auto" asp-area="" asp-page="ThankYouPage">Confirm order</a>
+        <a class="btn alert-primary mt-1 mx-auto" asp-area="" asp-page="ThankYou">Confirm order</a>
 
     </div>
 </div>
